@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-31T01:47:27Z",
+  "timestamp" : "2022-07-31T08:17:32Z",
   "count_outdated" : 426,
   "uniques_outdated" : 245,
-  "count" : 453,
-  "uniques" : 260,
+  "count" : 454,
+  "uniques" : 261,
   "clones" : [
     {
       "timestamp": "2022-07-19T00:00:00Z",
@@ -88,6 +88,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
