@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 4,
   "clones": [
     {
@@ -61,6 +61,11 @@
       "timestamp": "2022-07-30T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
